--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.3",
+    "bootstrap": "^5.2.0",
     "next": "12.2.3",
+    "plotly.js": "^2.13.3",
+    "plotly.js-dist": "^2.13.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
+    "@types/plotly.js": "^2.12.2",
+    "@types/react": "^18.0.15",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "typescript": "^4.7.4"
   }
 }
